unpackaged/main/default/objects/Gong__Gong_Call__c/fields/Gong__Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Gong__Engagement_Score__c</fullName>
    <label>Engagement Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>