unpackaged/main/default/objects/Gong__Gong_Call__c/fields/Gong__Opportunity_Stage_Now__c.field-meta.xml
<CustomField>
    <fullName>Gong__Opportunity_Stage_Now__c</fullName>
    <formula>IF( ISBLANK( Gong__Primary_Opportunity__c ) , &#39;&#39;,  TEXT(Gong__Primary_Opportunity__r.StageName ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage Now</label>
    <type>Text</type>
</CustomField>