unpackaged/main/default/objects/Gong__Gong_Call__c/fields/Primary_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_User_Role__c</fullName>
    <formula>Gong__Primary_User__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary User Role</label>
    <type>Text</type>
</CustomField>