unpackaged/main/default/objects/Gong__Gong_Call__c/listViews/Gong__All.listView-meta.xml
<ListView>
    <fullName>Gong__All</fullName>
    <columns>NAME</columns>
    <columns>Gong__Call_Start__c</columns>
    <columns>Gong__Call_Duration__c</columns>
    <columns>Gong__Primary_Account__c</columns>
    <columns>Gong__Primary_Opportunity__c</columns>
    <columns>Gong__Primary_User__c</columns>
    <columns>Gong__Related_to__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>